syntax = "proto3";

package go.micro.srv.user;
option go_package = "../user";
service User {
	rpc Register(RegReq) returns (Response) {};   // 注册用户
}

message RegReq {
	string mobile = 1;
	string password = 2;
	string sms_code = 3;
}

message Response {
	string errno = 1;
	string errmsg = 2;
}